# test-squawk

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  squawk.m4a  squawk.m4v  squawk.pcm  test-squawk.c
